<resources>
    <string name="app_name">SharedPreferences</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="label_login">Login</string>
    <string name="halaman_login_text">Halaman Login</string>
    <string name="ihsan_kurnia_2021">Created by Ihsan Kurnia 2021</string>
    <string name="testing_storage">Testing Storage</string>
</resources>