<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    
    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:text="@string/halaman_login_text"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title"
        android:layout_margin="20dp"
        android:hint="@string/str_username" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_username"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/str_password"
        android:password="true"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_password"
        android:layout_margin="20dp"
        android:text="@string/label_login" />

    <TextView
        android:id="@+id/text_create"
        android:layout_width="match_parent"
        android:layout_below="@+id/btn_login"
        android:textAlignment="center"
        android:layout_marginTop="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ihsan_kurnia_2021"/>
</RelativeLayout>